--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-flexbox-grid": "^2.1.2",
+    "react-scroll": "^1.7.16",
     "remark-emoji": "^2.1.0",
     "remark-kbd": "^1.0.21",
     "remark-slug": "^6.0.0",
