--- a/package.json
+++ b/package.json
@@ -7,29 +7,29 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "deploy": "next build && next export && git add out/ && git commit -m \"Deploy gh-pages\" && git subtree push --prefix out origin gh-pages"
+    "deploy": "next build && next export && git add out/ && git commit -m \"Deploy gh-pages\" && git push origin master && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
-    "@mdx-js/loader": "^1.6.1",
-    "@next/mdx": "^9.4.1",
+    "@mdx-js/loader": "^1.6.16",
+    "@next/mdx": "^9.5.1",
     "add": "^2.0.6",
     "classnames": "^2.2.6",
     "fs": "^0.0.1-security",
     "ip": "^1.1.5",
-    "next": "9.3.5",
+    "next": "9.5.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-flexbox-grid": "^2.1.2",
-    "react-scroll": "^1.7.16",
-    "react-tooltip": "^4.2.6",
+    "react-scroll": "^1.8.0",
+    "react-tooltip": "^4.2.8",
     "remark-emoji": "^2.1.0",
     "remark-kbd": "^1.0.21",
     "remark-slug": "^6.0.0",
     "remark-toc": "^7.0.0",
     "remark-twemoji": "^0.1.1",
-    "sass": "^1.26.5",
-    "twemoji": "^13.0.0",
+    "sass": "^1.26.10",
+    "twemoji": "^13.0.1",
     "yarn": "^1.22.4"
   }
 }
