--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "deploy": "next build && next export && git add out/ && git commit -m \"Deploy gh-pages\" && git push origin master && git subtree push --prefix out origin gh-pages"
+    "deploy": "next build && next export && git add * && git commit -m \"Deploy gh-pages\" && git push origin master && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.16",
