--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "remark-toc": "^7.0.0",
     "remark-twemoji": "^0.1.1",
     "sass": "^1.26.10",
-    "twemoji": "^13.0.1",
-    "yarn": "^1.22.4"
+    "twemoji": "^13.0.1"
   }
 }
