--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "remark-toc": "^7.0.0",
     "remark-twemoji": "^0.1.1",
     "sass": "^1.32.0",
-    "twemoji": "^13.0.1"
+    "twemoji": "^13.0.1",
+    "yarn": "^1.22.10"
   }
 }
