--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy": "next build && next export"
   },
   "dependencies": {
-    "@mdx-js/loader": "^1.6.22",
+    "@danktuary/react-discord-message": "^1.0.0",
+	"@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.0.5",
     "add": "^2.0.6",
     "classnames": "^2.2.6",
@@ -19,7 +20,6 @@
     "next": "10.0.5",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
-    "react-discord-message": "git+https://github.com/Danktuary/react-discord-message.git",
     "react-dom": "17.0.1",
     "react-flexbox-grid": "^2.1.2",
     "react-scroll": "^1.8.1",
